# ox-tracer

./: .gitignore  Cargo.toml  README.md  build.rs
resources/shaders/: flat_color.frag  ray.glsl  raygen.rgen  rayhit.rchit  raymiss.rmiss
src/: app.rs  main.rs
