[package]
name = "ox_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs.git"}
glam = "0.24.0"
futures = "0.3.25"
image = "0.24.5"
bytemuck = "1.13.0"
rand = "0.8.5"
winit = "0.28.3"
anyhow = { version = "1.0.69", features = ["backtrace"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
layout-rs = "0.1.1"
ash = { version = "0.37.0"}
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
gpu-allocator = "0.22.0"

[build-dependencies]
shaderc = { version = "0.8.2", features = ["build-from-source"] }

